<resources>
    <string name="app_name">O-Raymond-guichet-travail</string>
    <string name="username">Username</string>
    <string name="button">Sign in</string>
    <string name="nip">NIP</string>
    <string name="_3">3</string>
    <string name="__">,</string>
    <string name="_4">4</string>
    <string name="montant">Montant</string>
    <string name="bonjour_client_atm">Bonjour Client ATM</string>
    <string name="logout">Logout</string>
    <string name="_1">1</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_2">2</string>
    <string name="c">C</string>
    <string name="d_p_t">Dépôt</string>
    <string name="retrait">Retrait</string>
    <string name="virement">Virement</string>
    <string name="ch_que">Chèque</string>
    <string name="pargne">Épargne</string>
    <string name="tat_des_comptes">État des comptes</string>
    <string name="soumettre">soumettre</string>

</resources>